# pyncpp

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-BSD-3-Clause.txt  PYNCPPConfig.cmake.in  README.md  pyncppConfig.cmake.in
.github/workflows/: build-python-unix.yml  cmake-multi-platform.yml
cmake/: add_bindings_module.cmake  add_path_config_file.cmake  create_path_config_file.cmake  generate_external_project_directories.cmake  get_python_path_config.cmake  import_python_executable.cmake  import_python_executable_unix.cmake  import_python_executable_windows.cmake  import_python_library.cmake  import_python_library_unix.cmake  import_python_library_windows.cmake  install_embedded_python.cmake  install_executable.cmake  install_path_config_file.cmake  install_standard_library.cmake  target_add_path_config_file.cmake  target_create_path_config_file.cmake  target_install_path_config_file.cmake
cmake/internal/: get_version_from_git.cmake
config/: CMakeLists.txt  PYNCPPConfig.cmake.in  pyncppConfig.cmake.in
cpp_api/: CMakeLists.txt
cpp_api/pyncpp/: conversion.h  error.h
cpp_api/pyncpp/conversion/: qobject.cpp  qobject.h  qvariant.h
cpp_api/pyncpp/error/: error_handling.h
cpp_api/pyncpp/object/: function_call.cpp  module.cpp  module.h  standard_objects.cpp  standard_objects.h
examples/: CMakeLists.txt
examples/qt_console/: CMakeLists.txt  application.cpp  application.h  main.cpp
examples/source/: CMakeLists.txt
examples/source/qt_application/: CMakeLists.txt  main.cpp
pyncpp/: CMakeLists.txt  PYNCPPConfig.cmake.in  post_build.cmake
pyncpp/source/: CMakeLists.txt
pyncpp/source/cpp_api/: CMakeLists.txt  pyncpp.h
pyncpp/source/cpp_api/pyncpp/: conversion.h  export.h  manager.cpp  manager.h  object.h
pyncpp/source/cpp_api/pyncpp/conversion/: object.cpp  object.h  primitive.cpp  primitive.h  qlist.cpp  qobject.cpp  qobject.h  qstring.h  qvariant.cpp
pyncpp/source/cpp_api/pyncpp/error/: base_exception.cpp  base_exception.h  exception_thrower.cpp  exception_thrower.h  exception_traceback.cpp  exception_types.h
pyncpp/source/cpp_api/pyncpp/object/: abstract_object.cpp  abstract_object.h  attribute_accessor.cpp  attribute_accessor.h  container_accessor.cpp  function_call.cpp  function_call.h  object.cpp  object.h
pyncpp/source/swig/: CMakeLists.txt
pyncpp/source/swig/qt/: CMakeLists.txt  hash.i  list.i  object.i  pyncpp.i  qt.i  string.i  variant.i
pyncpp/source/tools/: CMakeLists.txt  global_values.py.in  setup.py  setup.py.in
pyncpp/source/tools/pyncpp_tools/: __init__.py  __main__.py  _pyside_link.py  _qt_console.py  console.py  link_libraries.py
pyncpp_examples/: CMakeLists.txt
pyncpp_examples/source/: CMakeLists.txt
pyncpp_examples/source/qt_console/: CMakeLists.txt  application.cpp  main.cpp
python/: CMakeLists.txt  hash.cmake  pyncppConfig_python.cmake.in  relocatable_sysconfig.py  unix.cmake  unix_launcher.sh.in  windows.cmake
python/unix/: CMakeLists.txt  PythonConfig.cmake.in  post_build.cmake  unix.cmake
python/windows/: CMakeLists.txt  PythonConfig.cmake.in  post_build.cmake  windows.cmake
source/: CMakeLists.txt  pyncppConfig_pyncpp.cmake
source/cpp_api/: CMakeLists.txt  pyncpp.h
source/cpp_api/pyncpp/: conversion.h  manager.cpp  manager.h
source/cpp_api/pyncpp/conversion/: object.cpp  object.h  primitive.cpp  primitive.h  qlist.h  qstring.cpp  qvariant.cpp  stdlist.cpp  stdlist.h  stdvector.cpp  stdvector.h
source/cpp_api/pyncpp/error/: base_exception.cpp  base_exception.h  error_handling.cpp  error_handling.h  exception_traceback.h  exception_types.cpp  exception_types.h
source/cpp_api/pyncpp/object/: abstract_object.cpp  abstract_object.h  container_accessor.h  function_call.h  module.cpp  module.h  object.cpp  object.h  standard_objects.h
source/executable/: CMakeLists.txt  main.cpp
